# Osman_Ozon

./: .gitignore  pyproject.toml
app/: config.py  database.py  main.py
app/audit/repositories/: audit_repo.py  dependencies.py
app/audit/routers/: audit_router.py
app/audit/schemas/: AuditActionDTOs.py  AuditDayDTO.py
app/audit/services/: handle_audit.py
app/clients/: request_to_market.py
app/crud/: orderdb.py
app/database/: db.py
app/database/models/: order.py  order_item.py  product.py  stock_batch.py
app/financial_report/repositories/: dependencies.py  report_repo.py
app/financial_report/routers/: report_router.py
app/financial_report/schemas/: frontendDTOs.py  ozonDTOs.py
app/financial_report/services/: handle_report.py  scheduler.py
app/infrastructure/: config.py  create_db.py  database.py
app/infrastructure/models/: audit.py  audit_actions.py  order.py  order_item.py  stock_item.py
app/market/repositories/: order_repo.py
app/market/routers/: router.py
app/market/schemas/: notification_dtos.py  response_dtos.py  transform.py
app/market/services/: handle_order.py
app/notifications/clients/: request_to_market.py
app/notifications/repositories/: dependencies.py  notifications.py  order_repo.py
app/notifications/routers/: notifications.py  router.py
app/notifications/schemas/: market_dtos.py  (+3 more)
app/repositories/: dependencies.py  order_repo.py  stock_batch_repo.py
app/routers/: router.py
app/schemas/: notification.py  order_dto.py  order_from_market.py  order_validation.py
app/services/: handle_order.py
app/tg_bot/: bot.py
(+13 files in other folders)
